force-app/main/default/objects/Lead/fields/CountryCapital__c.field-meta.xml
<CustomField>
    <fullName>CountryCapital__c</fullName>
    <formula>CountryDetail__r.Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Capital</label>
    <type>Text</type>
</CustomField>