force-app/main/default/objects/Lead/fields/CountryCodeIso2__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeIso2__c</fullName>
    <formula>CountryDetail__r.IsoCode2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code Iso2</label>
    <type>Text</type>
</CustomField>