force-app/main/default/objects/Lead/fields/CountryCodeIso3__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeIso3__c</fullName>
    <formula>CountryDetail__r.IsoCode3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code Iso3</label>
    <type>Text</type>
</CustomField>