force-app/main/default/objects/Lead/fields/CountryDetail__c.field-meta.xml
<CustomField>
    <fullName>CountryDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Detail</label>
    <referenceTo>CountryDetail__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>