force-app/main/default/objects/Lead/fields/CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>CountryRegion__c</fullName>
    <formula>CountryDetail__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Region</label>
    <type>Text</type>
</CustomField>