force-app/main/default/objects/Lead/fields/CountrySubregion__c.field-meta.xml
<CustomField>
    <fullName>CountrySubregion__c</fullName>
    <formula>CountryDetail__r.Subregion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Subregion</label>
    <type>Text</type>
</CustomField>