force-app/main/default/objects/Lead/validationRules/ownerChangeMedium.validationRule-meta.xml
<ValidationRule>
    <fullName>ownerChangeMedium</fullName>
    <active>true</active>
    <description>Leads do not allow to change owner unless Country, Lead Source and No. of Employees are filled in. This applies for all profiles except of System Administrator and Contract Manager profiles do not need to fill in the No. of Employees and System Admin</description>
    <errorConditionFormula>AND(  ISCHANGED( OwnerId ), $Profile.Name &lt;&gt; (&quot;System Administrator&quot;), OR (  ISPICKVAL(LeadSource, &quot;&quot;) ,   ISBLANK(Country)  ))</errorConditionFormula>
    <errorMessage>You must provide Lead Source and Country</errorMessage>
</ValidationRule>